--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <header>
     <div class="logo">THIS INTERIOR </div>
-    <button type="button" id="navbtn"> <img src="./img/menu.png"></button>
+    <button type="button" id="navbtn"> <img src="./menu.png"></button>
     <nav id="nav">
-      <button type="button" id="closebtn"><img src="./img/close.png" alt="exit"></button>
+      <button type="button" id="closebtn"><img src="./close.png" alt="exit"></button>
       <ul>
         <li class="active " id="home"> <a href="#">Home</a></li>
         <li id="collection"><a href="#"> Collection</a></li>
@@ -28,14 +28,14 @@
       <p class="intro">A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</p>
       <div class="content">
         <p>Read more</p>
-        <img src="./img/fleche.png">
+        <img src="./fleche.png">
       </div>
     </article>
     <aside id="aside">
-      <img src="./img/photo1.png" class="lounge-img">
+      <img src="./photo1.png" class="lounge-img">
       <div class="card-content">
         <div class="header-card">
-          <img src="./img/photo2.png" class="profil-img">
+          <img src="./photo2.png" class="profil-img">
           <div class="presentation">
             <p class="name">Aliza Webber</p>  
             <p class="profession">Interior designer</p>
